# Algebra

./: CMakeLists.txt  main.cpp
Benchmark/: CMakeLists.txt
Tests/: CMakeLists.txt  testAll.cpp  testFactorInteger.cpp  testFactorPolynomial.cpp  testInteger.cpp  testPolynomial.cpp
include/: Algebra.hpp  FactorInteger.hpp  FactorPolynomial.hpp  FieldFactor.hpp  Integer.hpp  Polynomial.hpp
include/Algebra/: AlgebraicDefaults.hpp  AlgebraicDefines.hpp  AlgebraicUtils.hpp
